[auth] feat: redux setting, integration login/register api

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,7 +8,9 @@
       "@utils/*": ["src/utils/*"],
       "@apis/*": ["src/apis/*"],
       "@hooks/*": ["src/hooks/*"],
-      "@context/*": ["src/context/*"]
+      "@context/*": ["src/context/*"],
+      "@redux/*": ["src/redux/*"],
+      "@schemas/*": ["src/schemas/*"],
     }
   }
 }
