--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@reduxjs/toolkit": "^2.5.0",
     "latest-version": "^9.0.0",
+    "lodash": "^4.17.21",
     "npm": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
